# Scoria

./: .gitignore  Build.mk  ChangeLog.md  Makefile  README.md  bugs.md  bugs.txt  fib.c  package.yaml  ssm.cabal  stack.yaml
app/: Main.hs
benchmarks/: compile_commands_path.py
benchmarks/protothreads-generator/: platformio.ini
blinky/: CMakeLists.txt  nrf52840dk.ovarlay  prj.conf
blinky/include/: peng-button.h  peng-led.h  (+1 more)
blinky2/: CMakeLists.txt  Makefile
blinky2/include/: peng-button.h  peng-led.h  peng-platform.h
blinky2/src/: main.c  peng-button.c  peng-led.c  peng-platform.c
chibios-code/: Makefile  README  blinky.c  blinky.h  main.c
doc/: Build.md  Test.md
edsl/: AST.hs  BoxTest.hs  Client.hs  CodeGen.hs  Core.hs  Frontend.hs  Generator.hs  HughesList.hs  Interpreter.hs  LowCodeGen.hs  LowCore.hs  LowGenerator.hs  LowInterpreter.hs  LowPretty.hs  Pretty.hs  PrettyPrinter.hs  SSM.hs  TestCases.hs  Trace.hs  TypeGen.hs  fib-quasi.c  fib-ref.c
edsl2/: AST.hs  CodeGen2.hs  Core2.hs  Fib2.hs  Frontend2.hs  Interpreter2.hs  NonTerminate2.hs  Pretty2.hs  SSM.hs  Trace2.hs
edsl3/: AST.hs  SSM.hs
edsl4/: AST.hs  SSM.hs
example/: Buggy.hs  ButtonBlinky.hs  Examp.hs  Examp2.hs  Example.hs  Example64bit.hs  Exampleuint8.hs  Fib.hs  Foo.hs  Manyrefs.hs  NonTerminate.hs  Nullary.hs
genc/: .gitignore  Build.mk
printfail/: Main.hs
runtime/: Build.mk
src/: SSM.hs
ssm/: SSM.hs
ssm-runtime/: program  program.c
test/: Build.hs  Evaluation.hs  Output.hs  Report.hs  Spec.hs  Trace.hs
testdir/: Makefile
trace-report/: load-test.sh  redo-test
(+238 files in other folders)
